@@ -83,9 +83,16 @@ Same as with skipif_ you can also selectively expect a failure
 depending on platform::
 
     @py.test.mark.xfail("sys.version_info >= (3,0)")
-
     def test_function():
         ...
+
+To not run a test and still regard it as "xfailed"::
+
+    @py.test.mark.xfail(..., run=False)
+
+To specify an explicit reason to be shown with xfailure detail::
+
+    @py.test.mark.xfail(..., reason="my reason")
 
 
 skipping on a missing import dependency
@@ -123,27 +130,41 @@ import py
 
 
 def pytest_runtest_setup(item):
+    if not isinstance(item, py.test.collect.Function):
+        return
     expr, result = evalexpression(item, 'skipif')
     if result:
         py.test.skip(expr)
+    holder = getattr(item.obj, 'xfail', None)
+    if holder and not holder.kwargs.get('run', True):
+        py.test.skip("<did not run>")
 
 def pytest_runtest_makereport(__multicall__, item, call):
-    if call.when != "call":
+    if not isinstance(item, py.test.collect.Function):
         return
-    expr, result = evalexpression(item, 'xfail')
-    rep = __multicall__.execute()
-    if result:
-        if call.excinfo:
-            rep.skipped = True
-            rep.failed = rep.passed = False
+    if call.when == "setup":
+        holder = getattr(item.obj, 'xfail', None)
+        if holder:
+            rep = __multicall__.execute()
+            reason = holder.kwargs.get("reason", "<no reason given>")
+            rep.keywords['xfail'] = "[not run] " + reason
+            return rep
+        return
+    elif call.when == "call":
+        expr, result = evalexpression(item, 'xfail')
+        rep = __multicall__.execute()
+        if result:
+            if call.excinfo:
+                rep.skipped = True
+                rep.failed = rep.passed = False
+            else:
+                rep.skipped = rep.passed = False
+                rep.failed = True
+            rep.keywords['xfail'] = expr 
         else:
-            rep.skipped = rep.passed = False
-            rep.failed = True
-        rep.keywords['xfail'] = expr 
-    else:
-        if 'xfail' in rep.keywords:
-            del rep.keywords['xfail']
-    return rep
+            if 'xfail' in rep.keywords:
+                del rep.keywords['xfail']
+        return rep
 
 # called by terminalreporter progress reporting
 def pytest_report_teststatus(report):
@@ -151,7 +172,7 @@ def pytest_report_teststatus(report):
         if report.skipped:
             return "xfailed", "x", "xfail"
         elif report.failed:
-            return "xpassed", "P", "xpass"
+            return "xpassed", "P", "XPASS"
 
 # called by the terminalreporter instance/plugin
 def pytest_terminal_summary(terminalreporter):
@@ -172,10 +193,13 @@ def show_xfailed(terminalreporter):
             entry = rep.longrepr.reprcrash
             modpath = rep.item.getmodpath(includemodule=True)
             pos = "%s %s:%d: " %(modpath, entry.path, entry.lineno)
-            reason = rep.longrepr.reprcrash.message
-            i = reason.find("\n")
-            if i != -1:
-                reason = reason[:i]
+            if rep.keywords['xfail']:
+                reason = rep.keywords['xfail'].strip()
+            else:
+                reason = rep.longrepr.reprcrash.message
+                i = reason.find("\n")
+                if i != -1:
+                    reason = reason[:i]
             tr._tw.line("%s %s" %(pos, reason))
 
     xpassed = terminalreporter.stats.get("xpassed")
